[CSS Blending] Compositing requirements for blending are not computed correctly https://bugs.webkit.org/show_bug.cgi?id=130664

Patch by Ion Rosca <rosca@adobe.com> on 2014-04-02
Reviewed by Dean Jackson.

Source/WebCore:

Tests: css3/compositing/blend-mode-accelerated-with-multiple-stacking-contexts.html
       css3/compositing/blend-mode-with-accelerated-sibling.html

Compositing requirements for blending: if a layer having blend mode
other than normal is composited for any reason, its closest stacking
context ancestor should be composited as well.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::RenderLayer):
* rendering/RenderLayer.h: added a new field,
m_hasUnisolatedCompositedBlendingDescendants, which is true if the layer
has composited blending descendants not isolated by any stacking context child;
added a new method: isolatesCompositedBlending(), which is true if we should
accelerate that layer in order to perform isolation correctly.

* rendering/RenderLayerCompositor.cpp:
(WebCore::CompositingState::CompositingState): m_subtreeHasBlending was renamed
m_hasUnisolatedCompositedBlendingDescendants in order to be more self-explanatory.
(WebCore::RenderLayerCompositor::computeCompositingRequirements):
computes the isolation requirements for composited blending by
(re)setting RenderLayer::m_hasUnisolatedCompositedBlendingDescendants flag.

(WebCore::RenderLayerCompositor::reasonsForCompositing):
fixed the reason of compositing: isolation instead of blending.

(WebCore::RenderLayerCompositor::requiresCompositingForIndirectReason):
* rendering/RenderLayerCompositor.h:

LayoutTests:

* css3/compositing/blend-mode-accelerated-with-multiple-stacking-contexts-expected.txt: Added.
* css3/compositing/blend-mode-accelerated-with-multiple-stacking-contexts.html: Added.
* css3/compositing/blend-mode-with-accelerated-sibling-expected.txt: Added.
* css3/compositing/blend-mode-with-accelerated-sibling.html: Added.

Canonical link: https://commits.webkit.org/149138@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166634 268f45cc-cd09-0410-ab3c-d52691b4dbfc